fixed scrolling on small screens

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,7 @@ h1 {
         -ms-transition: all 12s, ease;
 
         .container-first {
-            height: 50vh;
+            max-height: 50vh;
 
             .inp {
                 width: 100%;
@@ -34,7 +34,7 @@ h1 {
 
             #btn-theme {
                 border: black solid 1px;
-                
+
                 outline: 0!important;
                 outline-color: transparent!important;
                 outline-width: 0!important;
@@ -53,7 +53,7 @@ h1 {
         }
 
         .container-second {
-            height: 50vh;
+            max-height: 50vh;
 
             .button-block {
                 margin-top: 5%;
